@@ -227,8 +227,8 @@
               <tr><td><code>0</code></td><td>SQL is sent to the server each time without any preparation</td></tr>
               <tr><td><code>1</code></td><td>Temporary stored procedures are created for each unique SQL statement and parameter combination</td></tr>
               <tr><td><code>2</code></td><td>sp_executesql is used</td></tr>
-              <tr><td><code>3 (experimental)</code></td><td>sp_prepare is used in conjunction with sp_execute</td></tr>
-              <tr><td><code>4 (experimental)</code></td><td>sp_prepexec is used in conjunction with sp_execute</td></tr>
+              <tr><td><code>3 (experimental)</code></td><td>sp_prepare and sp_cursorprepare are used in conjunction with sp_execute and sp_cursorexecute</td></tr>
+              <tr><td><code>4 (experimental)</code></td><td>sp_prepexec and sp_cursorprepexec are used in conjunction with sp_execute and sp_cursorexecute</td></tr>
             </tbody>
           </table>
           </dd></dt>
